feat: Add pr closed event (#643)
